package com.apps.jivory.googlemaps.observers;

public interface FirebaseObserver {
    void onChanged();
}
